--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -197,19 +197,19 @@
                 </div>
                 <div class="footer-section">
                     <h5>Полезни връзки</h5>
-                    <a href="#" title="Правила на форума">Правила на форума</a>
-                    <a href="#" title="Често задавани въпроси">Често задавани въпроси</a>
-                    <a href="#" title="Контакти">Контакти</a>
+                    <a th:href="@{/info/rules}" title="Правила на форума">Правила на форума</a>
+                    <a th:href="@{/info/faq}" title="Често задавани въпроси">Често задавани въпроси</a>
+                    <a th:href="@{/info/contact}" title="Контакти">Контакти</a>
                 </div>
                 <div class="footer-section">
                     <h5>Последвайте ни</h5>
-                    <a href="#" title="Facebook страница" target="_blank" rel="noopener noreferrer">Facebook</a>
-                    <a href="#" title="Instagram профил" target="_blank" rel="noopener noreferrer">Instagram</a>
-                    <a href="#" title="YouTube канал" target="_blank" rel="noopener noreferrer">YouTube</a>
+                    <a href="https://facebook.com" title="Facebook страница" target="_blank" rel="noopener noreferrer">Facebook</a>
+                    <a href="https://instagram.com" title="Instagram профил" target="_blank" rel="noopener noreferrer">Instagram</a>
+                    <a href="https://youtube.com" title="YouTube канал" target="_blank" rel="noopener noreferrer">YouTube</a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 UFC България Форум. Всички права запазени. Този сайт не е свързан официално с UFC.</p>
+                <p>&copy; 2025 UFC България Форум. Всички права запазени. Този сайт не е свързан официално с UFC.</p>
             </div>
         </div>
     </footer>
